--- a/1.html
+++ b/1.html
@@ -42,6 +42,7 @@
   position: relative;
   display: inline-block;
   cursor: pointer;
+  color: blue;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -106,7 +107,7 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
 reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
 Excepteur sint 
-  <div class="popup" onclick="myFunction()">Click me to toggle the popup!
+  <div class="popup" onclick="myFunction()" color:>referencja jakaś tam
   <span class="popuptext" id="myPopup">A Simple Popup!</span>
 </div>
   occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
