--- a/1.html
+++ b/1.html
@@ -12,35 +12,10 @@
 </script>
     
 <style>
-    .myDiv {
-        display: block;
-        inline-block;
-        padding: 10px;
-        vertical-align: text-top;
-        text-align: left;
-        height: 255px;
-        width: 225px;
-        padding-top: 4px;
-    }
-    .myDiv2 {
-        height: 220px;
-        }
-    h1 {
-        margin-top: 4px;
-        margin-bottom: 4px;
-    }
-    h2 {
-        margin-top: 8px;
-        margin-bottom: 8px;
-    }
-    h3 {
-        margin-top: 4px;
-        margin-bottom: 4px;
-    }
   /* Popup container - can be anything you want */
 .popup {
-  position: relative;
-  display: inline-block;
+ /* position: relative;*/
+ /* display: inline-block;*/
   cursor: pointer;
   color: blue;
   -webkit-user-select: none;
@@ -50,7 +25,7 @@
 }
 
 /* The actual popup */
-.popup .popuptext {
+.popuptext {
   visibility: hidden;
   width: 160px;
   background-color: #555;
