--- a/1.html
+++ b/1.html
@@ -5,17 +5,19 @@
 
 
 <script>
-  function myFunction() {
-  var popup = document.getElementById("myPopup");
-  popup.classList.toggle("show");
+  function showReference() {
+  var reference = document.getElementById("reference");
+  reference.classList.toggle("show");
 }
 </script>
     
 <style>
-  /* Popup container - can be anything you want */
-.popup {
- /* position: relative;*/
- /* display: inline-block;*/
+
+
+  
+.reference {
+  position: relative;
+  display: inline-block;
   cursor: pointer;
   color: blue;
   -webkit-user-select: none;
@@ -24,8 +26,8 @@
   user-select: none;
 }
 
-/* The actual popup */
-.popuptext {
+/* The actual reference */
+.reference .referencetext {
   visibility: hidden;
   width: 160px;
   background-color: #555;
@@ -40,8 +42,8 @@
   margin-left: -80px;
 }
 
-/* Popup arrow */
-.popup .popuptext::after {
+/* reference arrow */
+.reference .referencetext::after {
   content: "";
   position: absolute;
   bottom: 100%; /* changed top to bottom */
@@ -52,14 +54,14 @@
   border-color: transparent transparent #555 transparent; /* changed border botom color instead of top*/
 }
 
-/* Toggle this class - hide and show the popup */
-.popup .show {
+/* Toggle this class - hide and show the reference */
+.reference .show {
   visibility: visible;
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s;
 }
 
-/* Add animation (fade in the popup) */
+/* Add animation (fade in the reference) */
 @-webkit-keyframes fadeIn {
   from {opacity: 0;} 
   to {opacity: 1;}
@@ -69,6 +71,10 @@
   from {opacity: 0;}
   to {opacity:1 ;}
 }
+
+
+
+  
 </style>
 </head>
 <body style="background-color: #f9f9f9;">
@@ -82,8 +88,8 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
 reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
 Excepteur sint 
-  <div class="popup" onclick="myFunction()" color:>referencja jakaś tam
-  <span class="popuptext" id="myPopup">A Simple Popup!</span>
+  <div class="reference" onclick="showReference()" color:>referencja jakaś tam
+  <span class="referencetext" id="reference">A Simple reference!</span>
 </div>
   occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 
