--- a/1.html
+++ b/1.html
@@ -16,9 +16,9 @@
 
   
 .reference {
-  position: relative;
+ /* position: relative;
   display: inline-block;
-  cursor: pointer;
+  cursor: pointer;*/
   color: blue;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -87,10 +87,7 @@ sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
 nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
 reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-Excepteur sint 
-  <div class="reference" onclick="showReference()" color:>referencja jakaś tam
-  <span class="referencetext" id="reference">A Simple reference!</span>
-</div>
+Excepteur sint <div class="reference" onclick="showReference()" color:>referencja jakaś<span class="referencetext" id="reference">text referencji</span></div>
   occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
 
 Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC
