--- a/1.html
+++ b/1.html
@@ -16,9 +16,9 @@
 
   
 .reference {
- /* position: relative;
+  position: relative;
   display: inline-block;
-  cursor: pointer;*/
+  cursor: pointer;
   color: blue;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -80,22 +80,7 @@
 <body style="background-color: #f9f9f9;">
    
   
-  
-  The standard Lorem Ipsum passage, used since the 1500s
-"Lorem ipsum dolor sit amet, consectetur adipiscing elit, '
-sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+asasasasasasa
 reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-Excepteur sint <div class="reference" onclick="showReference()" color:>referencja jakaś<span class="referencetext" id="reference">text referencji</span></div>
-  occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-
-Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC
-"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque 
-laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi 
-architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas 
-sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione 
-voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et 
-dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem
-ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel 
+Excepteur sint <span class="reference" onclick="showReference()">referencja jakaś<span class="referencetext" id="reference">text referencji</span></span> asasasaasasa
+  
