--- a/1.html
+++ b/1.html
@@ -119,18 +119,20 @@ Wielmożnemu Panu / Panu Janowi Kiszce / Wielkiego Księstwa Litewskiego Krajcze
 (***)
 
 
-   Tak mi się zda, Wielmożny Panie, że to W.M. dobrze rozumiesz, iż gdy kto chce zwieść kogo, pierwej mu dlatego jasną prawdę powie, 
+<p>Tak mi się zda, Wielmożny Panie, że to W.M. dobrze rozumiesz, iż gdy kto chce zwieść kogo, pierwej mu dlatego jasną prawdę powie, 
 aby go wyrozumiawszy, być w jednej rzeczy prawdziwego i w drugich rzeczach takiegoż być mniemał. Co to w wielu błędziech może być 
 ukazano. Gdy kto chce ukazać, że jedyny Bóg jest Trójca, ten się napierwej do tej prawdy uciecze, iż jedyny jest Bóg. Potem będzie 
 swą rzecz tak ozdobną czynił pod tą prawdą, iż nieobacznemu będzie się zdało, że to jest prawda, co on sobie wymyślił, aby jedyny 
-Bóg był Trójca, a to fałsz, co słowo Boże uczy, że jedyny Bóg jest Ociec. Tego fortelu i naszego czasu ebijonitowie używają. 
-Bo najpierwej to ukazują, co jest ista prawda, jako że sam Bóg niebo stworzył; i nie był z nim żadzien, który by mu tworzyć pomógł. 
-A iż Chrystus jest nasienie niewieście, syn Abrahamów, Dawidów i inszych ojców, z których jest Chrystus według ciała. 
-Potem tak to ozdobno czynią prostym ludziam, iż też to, co oni wymyślili, będzie się zdało prawdą, a to zwodem, co jest 
-jaśnie w szczyrym słowie Bożym, jako to, że przez Chrystusa Bóg wieki stworzył, świat i wszystkie rzeczy widome i niewidome. 
+Bóg był Trójca, a to fałsz, co słowo Boże uczy, że jedyny Bóg jest Ociec.</p>
+  
+&nbsp;&nbsp;&nbsp;   Tego fortelu i naszego czasu ebijonitowie używają. Bo najpierwej to ukazują, co jest ista prawda, jako że sam Bóg niebo stworzył; 
+i nie był z nim żadzien, który by mu tworzyć pomógł. A iż Chrystus jest nasienie niewieście, syn Abrahamów, Dawidów i inszych ojców, 
+z których jest Chrystus według ciała. Potem tak to ozdobno czynią prostym ludziam, iż też to, co oni wymyślili, będzie się zdało 
+prawdą, a to zwodem, co jest jaśnie w szczyrym słowie Bożym, jako to, że przez Chrystusa Bóg wieki stworzył, świat i wszystkie rzeczy widome i niewidome. 
 Bo na oko widziem, że to ich wiele za prawdę ma, aby Chrystus przed stworzeniom świata nie był, a iżeby nic starego przezeń 
 nie było uczyniono, choć to jest szczyry wymysł ebijoński, a to przeto, iż oni to ozdobno uczynili oną prawdą, że sam Bóg wszystko stworzył. 
-To zasię za zwód mają, że zgoła wszystko Bóg przez Chrystusa uczynił, a iż Chrystus był przed wieki, chociaż to jest jasne i szczyre słowo Boże.  
+ 
+&nbsp;&nbsp;&nbsp;   To zasię za zwód mają, że zgoła wszystko Bóg przez Chrystusa uczynił, a iż Chrystus był przed wieki, chociaż to jest jasne i szczyre słowo Boże.  
 A to jest jeszcze sprośniejszy ich fortel, iż wiedząc, że u antychrysta wszystko, co jest jego, jest słowu Bożemu przeciwne, a chcąc ukazać, 
 żeby z nim żadnej spólności nie mieli, o Chrystusie człowieku pisząc i mówiąc, tak na niego docierają, jakoby on tego nie uczył, czego oni uczą, 
 ale rzeczy przeciwnej. I ten fortel pięknie ozdabiają ukazując, że antychryst uczy o jednej istności trzech person, o społecznej ich wieczności. 
@@ -145,11 +147,13 @@ iż przeciwnych słowu Bożemu rzeczy uczy. Ale i z godnej nauki może ich każd
 Bożemu, że człowiek Chrystus, Syn Boży, przedtem nie był. I przeto też także jako i ebijonite niewłaśnie rozumie onych Chrystusowych o sobie 
 świadectw: „Zstąpiłem z nieba. Gdy ujrzycie Syna człowieczego wstępującego tam, gdzie był pierwej’’ i inych podobnych. 
   
-W słowiech i w wykładaniu różność mają, ale to ich z jednego jarzma nie rozprząga, ponieważ ku jednej rzeczy słowo Boże naciągają. Nie dla różnych 
-ci wykładów, ale dla rzeczy fałszywych nie mamy jarzma ciągnąć jako z niewiernymi, tak i z heretyki. Prząć się oni, W.P., żeby mieli co z antychrystem, 
-  ale jeśli Pan Bóg W.M. duszne oczy oświeci, tedy wyrozumie, iż oni o Chrystusie człowieku tegoż uczą, czego antychryst uczy. Bo izaliby antychryst 
-  ono Chrystusowe o sobie świadectwo: „Pierwej, niżli się Abraham rodził, ja jestem” niewłaśnie rozumiał, gdyby temu wierzył, że przedtem był? 
-  Nie dlaczegoć inego on wynalazł communicationem idiomatum, to jest społeczność własności, jedno przeto, iż wierzy, że przed Abrahamem nie był. 
+   W słowiech i w wykładaniu różność mają, ale to ich z jednego jarzma nie rozprząga, ponieważ ku jednej rzeczy słowo Boże naciągają. Nie dla różnych 
+ci wykładów, ale dla rzeczy fałszywych nie mamy jarzma ciągnąć jako z niewiernymi, tak i z heretyki. 
+  
+  Prząć się oni, W.P., żeby mieli co z antychrystem, 
+ale jeśli Pan Bóg W.M. duszne oczy oświeci, tedy wyrozumie, iż oni o Chrystusie człowieku tegoż uczą, czego antychryst uczy. Bo izaliby antychryst 
+ono Chrystusowe o sobie świadectwo: „Pierwej, niżli się Abraham rodził, ja jestem” niewłaśnie rozumiał, gdyby temu wierzył, że przedtem był? 
+Nie dlaczegoć inego on wynalazł communicationem idiomatum, to jest społeczność własności, jedno przeto, iż wierzy, że przed Abrahamem nie był. 
 W tym tylko mają rózność, że antychryst powieda, iż bóstwo przyoblokło na się człowieka i mieszka w nim, a oni tylko to poślednie z nim wyznawają, 
   przeto iż nie tylko antychryst, ale też i Paweł tychże słów używał. I oboi mniemają, żeby toż o Chrystusie wierzyli, co słowo Boże uczy. 
   Aleć nie wierzą; bo Paweł nie o tym Chry-stusie powiedał, że pełność bóstwa w nim mieszka, który nie był przed Abrahamem, ale o tym, który przed 
