--- a/1.html
+++ b/1.html
@@ -79,7 +79,7 @@
 </head>
 <body style="background-color: #f9f9f9;">
   
-<div style="max-width: 1000px;margin: auto;">
+<div style="max-width: 1000px;margin: auto;text-align: justify;">
 </br>
 
 <br><br><br><br><br><br>
