--- a/1.html
+++ b/1.html
@@ -83,41 +83,43 @@
 </br>
 
 <br><br><br><br><br><br>
-Piotr z Goniądza
-O SYNU BOŻYM
-Iże był przed stworzeniem świata
-a iż jest przezeń wszystko uczyniono
-przeciw fałesznym wykrętom ebijońskim
+<h1>
+  Piotr z Goniądza
+</h1>
 
+   <br><br><br>
+  
+<h2>O SYNU BOŻYM<br>
+Iże był przed stworzeniem świata<br>
+a iż jest przezeń wszystko uczyniono<br>
+przeciw fałesznym wykrętom ebijońskim<br>
+</h2>
 
+  <br><br><br>
 
+<h3>
 Zachariae VI:
 To jest:
 Oto mąż, Różczka imię jego, a (z tych którzy są) pod nim urodzi się
-<br><br><br> <br><br><br>
+   <br><br><br> <br><br><br> <br><br><br>
+</h3>
 
-
-Drukowano w Węgrowie lata Pańskiego według ciała
+<h3>
+  Drukowano w Węgrowie lata Pańskiego według ciała
 MDLXX
-
+</h3>
+  
  <br><br><br><br><br><br>
   
 
-
-
-
-
-
-
-
-
-
-
-Przedmowa   </br></br></br>
-
-Wielmożnemu Panu / Panu Janowi Kiszce / Wielkiego Księstwa Litewskiego Krajczemu / Ducha Mądrości i bojaźni Bożej Żąda   </br></br></br>
+<h2>
+  Przedmowa   </br></br></br>
+</h2>
+  
+<h3>
+  Wielmożnemu Panu / Panu Janowi Kiszce / Wielkiego Księstwa Litewskiego Krajczemu / Ducha Mądrości i bojaźni Bożej Żąda   </br></br></br>
 (***)   </br></br></br>
-
+</h3>
 
 &nbsp;&nbsp;&nbsp;   Tak mi się zda, Wielmożny Panie, że to W.M. dobrze rozumiesz, iż gdy kto chce zwieść kogo, pierwej mu dlatego jasną prawdę powie, 
 aby go wyrozumiawszy, być w jednej rzeczy prawdziwego i w drugich rzeczach takiegoż być mniemał. Co to w wielu błędziech może być 
