--- a/1.html
+++ b/1.html
@@ -95,13 +95,13 @@ a iż jest przezeń wszystko uczyniono<br>
 przeciw fałesznym wykrętom ebijońskim<br>
 </h2>
 
-  <br><br><br>
+  <br><br>
 
 <h3 align="center">
 Zachariae VI:
 To jest:
 Oto mąż, Różczka imię jego, a (z tych którzy są) pod nim urodzi się
-   <br><br><br> <br><br><br>
+   <br><br><br> <br>
 </h3>
 
 <h3 align="center">
@@ -116,8 +116,10 @@ MDLXX
   Przedmowa   </br></br></br>
 </h2>
   
-<h3>
-  Wielmożnemu Panu / Panu Janowi Kiszce / Wielkiego Księstwa Litewskiego Krajczemu / Ducha Mądrości i bojaźni Bożej Żąda   </br></br></br>
+<h3 align="center">
+  Wielmożnemu Panu / Panu Janowi Kiszce / 
+  </br>Wielkiego Księstwa Litewskiego Krajczemu / 
+  </br>Ducha Mądrości i bojaźni Bożej Żąda   </br></br></br>
 (***)   </br></br></br>
 </h3>
 
@@ -227,8 +229,8 @@ MDLXX
 
 <br><br><br><br><br>
 <h2 align="center">O Synu Bożym iże był przed stworzeniem świata 
-a iż jest przezeń wszystko uczyniono 
-przeciw fałesznym wykętom ebijońskim 
+</br>a iż jest przezeń wszystko uczyniono 
+</br>przeciw fałesznym wykętom ebijońskim 
 (*)</h2>
   
 <br><br><br>
