--- a/1.html
+++ b/1.html
@@ -235,7 +235,13 @@ MDLXX
   
 <br><br><br>
 
-</br>&nbsp;&nbsp;&nbsp;   Że Moiżesz, wypisując stworzenie wszystkich rzeczy, nie wypisał tak jaśnie, jako jest wypisano w Nowym Zakonie, że przez Syna swego wszytko Bóg stworzył, 
+</br>&nbsp;&nbsp;&nbsp;   Że Moiżesz, 
+  
+  <span class="reference" onclick="showReference()">wypisując <span class="referencetext">
+             Czego żadzien z sług Bożych nie wypisał, o tym nie trzeba nic dzierżeć, ale co aby jeden wypisał, temu wierzyć mamy.  
+  </span></span> 
+  
+  stworzenie wszystkich rzeczy, nie wypisał tak jaśnie, jako jest wypisano w Nowym Zakonie, że przez Syna swego wszytko Bóg stworzył, 
   nie trzeba się tego domyślać, żeby natenczas nie był, bo togo to nie ukazuje i za tym nie idzie, ale wierzyć, że musiała być tego słuszna przyczyna, dla 
   której natenczas tak wyraźnie nie objawił tego Bóg przez proroki, jako teraz, gdy czas przyszedł łaski, objawił przez apostoły. Nie mniej ci na tym należy 
   nasze zbawienie wierzyć, że Chrystus jest Syn Bo-ży jednorodzony, a wżdy i tego w Starym Zakonie nigdziej tak jaśnie nie wypisano jako w Nowym. Bo skąd to 
