--- a/1.html
+++ b/1.html
@@ -99,8 +99,9 @@ przeciw fałesznym wykrętom ebijońskim<br>
 
 <h3 align="center">
 Zachariae VI:
-To jest:
-Oto mąż, Różczka imię jego, a (z tych którzy są) pod nim urodzi się
+  </br>To jest:
+  Oto mąż, Różczka imię jego, a (z tych którzy są) 
+  </br> pod nim urodzi się
    <br><br><br> <br>
 </h3>
 
