--- a/1.html
+++ b/1.html
@@ -5,8 +5,8 @@
 
 
 <script>
-  function showReference() {
-  var reference = document.getElementById("reference");
+  function showReference(event) {
+  var reference = event.target;
   reference.classList.toggle("show");
 }
 </script>
@@ -238,7 +238,7 @@ MDLXX
 
 </br>&nbsp;&nbsp;&nbsp;   Że Moiżesz, 
   
-  <span class="reference" onclick="showReference()">wypisując <span class="referencetext">
+  <span class="reference" onclick="showReference(this)">wypisując <span class="referencetext">
              Czego żadzien z sług Bożych nie wypisał, o tym nie trzeba nic dzierżeć, ale co aby jeden wypisał, temu wierzyć mamy.  
   </span></span> 
   
