--- a/1.html
+++ b/1.html
@@ -6,8 +6,7 @@
 
 <script>
   function showReference(event) {
-  var reference = event.target;
-  reference.classList.toggle("show");
+  event.lastChild.classList.toggle("show");
 }
 </script>
     
