--- a/1.html
+++ b/1.html
@@ -237,9 +237,9 @@ MDLXX
 
 </br>&nbsp;&nbsp;&nbsp;   Że Moiżesz, 
   
-  <span class="reference" onclick="showReference(this);">wypisując <span class="referencetext">
+  <div class="reference" onclick="showReference(this);">wypisując </span><span class="referencetext">
              Czego żadzien z sług Bożych nie wypisał, o tym nie trzeba nic dzierżeć, ale co aby jeden wypisał, temu wierzyć mamy.  
-  </span></span> 
+  </div> 
   
   stworzenie wszystkich rzeczy, nie wypisał tak jaśnie, jako jest wypisano w Nowym Zakonie, że przez Syna swego wszytko Bóg stworzył, 
   nie trzeba się tego domyślać, żeby natenczas nie był, bo togo to nie ukazuje i za tym nie idzie, ale wierzyć, że musiała być tego słuszna przyczyna, dla 
