--- a/1.html
+++ b/1.html
@@ -16,7 +16,7 @@
   
 .reference {
   position: relative;
-  display: inline-block;
+/*   display: inline-block; */
   cursor: pointer;
   color: blue;
   -webkit-user-select: none;
@@ -237,8 +237,8 @@ MDLXX
 
 </br>&nbsp;&nbsp;&nbsp;   Że Moiżesz, 
   
-  <span class="reference" onclick="showReference(this)">wypisując <a class="referencetext">
-             Czego żadzien z sług Bożych nie wypisał, o tym nie trzeba nic dzierżeć, ale co aby jeden wypisał, temu wierzyć mamy.</a>  
+  <span class="reference" onclick="showReference(this);">wypisując <div class="referencetext">
+             Czego żadzien z sług Bożych nie wypisał, o tym nie trzeba nic dzierżeć, ale co aby jeden wypisał, temu wierzyć mamy.</div>  
   </span> 
   
   stworzenie wszystkich rzeczy, nie wypisał tak jaśnie, jako jest wypisano w Nowym Zakonie, że przez Syna swego wszytko Bóg stworzył, 
