--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
 
 <script>
   function showReference(event) {
-  event.lastChild.classList.toggle("show");
+   event.target.querySelector('.referencetext').classList.toggle("show");
 }
 </script>
     
