--- a/1.html
+++ b/1.html
@@ -237,8 +237,8 @@ MDLXX
 
 </br>&nbsp;&nbsp;&nbsp;   Że Moiżesz, 
   
-  <span class="reference" onclick="showReference(this);">wypisując <div class="referencetext">
-             Czego żadzien z sług Bożych nie wypisał, o tym nie trzeba nic dzierżeć, ale co aby jeden wypisał, temu wierzyć mamy.</div>  
+  <span class="reference" onclick="showReference(this);">wypisując <span class="referencetext">
+             Czego żadzien z sług Bożych nie wypisał, o tym nie trzeba nic dzierżeć, ale co aby jeden wypisał, temu wierzyć mamy.</span>  
   </span> 
   
   stworzenie wszystkich rzeczy, nie wypisał tak jaśnie, jako jest wypisano w Nowym Zakonie, że przez Syna swego wszytko Bóg stworzył, 
