--- a/1.html
+++ b/1.html
@@ -28,6 +28,7 @@
 /* The actual reference */
 .reference .referencetext {
   visibility: hidden;
+  font-size: 14px;
   width: 160px;
   background-color: #555;
   color: #fff;
