--- a/1.html
+++ b/1.html
@@ -16,7 +16,7 @@
   
 .reference {
   position: relative;
-/*   display: inline-block; */
+  display: inline-block;
   cursor: pointer;
   color: blue;
   -webkit-user-select: none;
@@ -28,7 +28,7 @@
 /* The actual reference */
 .reference .referencetext {
   visibility: hidden;
-  font-size: 14px;
+  font-size: 24px;
   width: 160px;
   background-color: #555;
   color: #fff;
