--- a/1.html
+++ b/1.html
@@ -16,7 +16,7 @@
   
 .reference {
   position: relative;
-  display: inline-block;
+/*   display: inline-block; */
   cursor: pointer;
   color: blue;
   -webkit-user-select: none;
