--- a/1.html
+++ b/1.html
@@ -248,13 +248,26 @@ MDLXX
   nasze zbawienie wierzyć, że Chrystus jest Syn Bo-ży jednorodzony, a wżdy i tego w Starym Zakonie nigdziej tak jaśnie nie wypisano jako w Nowym. Bo skąd to 
   jest, że Żydzi nie wierzą, aby Bóg miał Syna własnego, nie zinąd, jedno stąd, że tego tak jaśnie nie wypisano w Starym Zakonie jako w Nowym. 
 
-</br>&nbsp;&nbsp;&nbsp;   Wypisał Moiżesz, że w nasieniu Abrahamowym miały być błogosławione wszystki narody, ale tego nie wypisał jaśnie, słowy wyraźnymi, żeby ten Abrahamów syn miałby 
+</br>&nbsp;&nbsp;&nbsp;    
+  
+  <span class="reference" onclick="showReference(this);">Wypisał<span class="referencetext">
+             Gene. 22. v. 18 </br> i 26. v. 1.</span>  
+  </span>  
+  
+  Moiżesz, że w nasieniu Abrahamowym miały być błogosławione wszystki narody, ale tego nie wypisał jaśnie, słowy wyraźnymi, żeby ten Abrahamów syn miałby 
   też być i Synem Bożym własnym. Otóż jeśliby kto chciał stąd dowieść, że Chrystus obiecany nie jest Synem Bożym własnym, iż tego Moiżesz nie wyraził, chociaż 
   o nim wzmiankę czynił powiedając, że w nim będą błogosławione wszystki narody, ten dowód żydowi będzie prawdziwy, ale chrystyjaninowi nie, który wierząc być 
   prawdziwą naukę Nowego Zakonu, nie niewiadomości ani niedbałości Moiżeszowej to przypisuje, że tego nie wypisał tak jaśnie, jako jest wypisano w Nowym od apostołów, 
   ale mądrości Bożej, który nie bez przyczyny to tak chciał mieć.
 
-</br>&nbsp;&nbsp;&nbsp;   I w Nowym ci Zakonie niejednako wszystkim objawiono, jako świadczy sam Syn Boży, mówiąc do apostołów: „Wam dano jest poznać tajemnice królestwa niebieskiego, a onym 
+</br>&nbsp;&nbsp;&nbsp;   I w Nowym ci Zakonie niejednako wszystkim 
+
+  <span class="reference" onclick="showReference(this);">objawiono<span class="referencetext">
+             Matt. 13. v. 11.</br>I w Nowym Za¬konie nie wszyst¬kim jaśnie wszystko oznajmiono.</span>  
+  </span> 
+  
+
+  , jako świadczy sam Syn Boży, mówiąc do apostołów: „Wam dano jest poznać tajemnice królestwa niebieskiego, a onym 
   nie dano”.
   
 </br>&nbsp;&nbsp;&nbsp;   Otóż i tu nie trzeba się nic domyślać, jedno wierzyć, iż Bóg nie bez przyczyny, ale słusznie czyni, cokolwiek czyni. Komu chce, temu jaśnie swe 
