--- a/1.html
+++ b/1.html
@@ -263,7 +263,7 @@ MDLXX
 </br>&nbsp;&nbsp;&nbsp;   I w Nowym ci Zakonie niejednako wszystkim 
 
   <span class="reference" onclick="showReference(this);">objawiono<span class="referencetext">
-             Matt. 13. v. 11.</br>I w Nowym Za¬konie nie wszyst¬kim jaśnie wszystko oznajmiono.</span>  
+             Matt. 13. v. 11.</br>I w Nowym Zakonie nie wszystkim jaśnie wszystko oznajmiono.</span>  
   </span> 
   
 
@@ -272,7 +272,15 @@ MDLXX
   
 </br>&nbsp;&nbsp;&nbsp;   Otóż i tu nie trzeba się nic domyślać, jedno wierzyć, iż Bóg nie bez przyczyny, ale słusznie czyni, cokolwiek czyni. Komu chce, temu jaśnie swe 
   tajemnice objawia, a komu nie chce, nie objawia. Przetoż żydowi ten dowód będzie prawdziwy, a chrystyjaninowi fałszywe zofisma, żeby Bóg przez Chrystusa tego świata nie 
-  stworzył, a to dlatego, iż Moiżesz wypisując, że Bóg wszystko stworzył, nie wypisał też tego, że przez Syna wszystko stworzył. Bo chrystyjanin, jako wierzy, że Abrahamów syn, 
+  stworzył, a to dlatego, iż Moiżesz wypisując, że Bóg wszystko stworzył, nie wypisał też tego, że przez Syna wszystko stworzył. 
+
+
+  <span class="reference" onclick="showReference(this);"> Bo chrystyjanin, jako wierzy<span class="referencetext">
+             Chrystyjanin wierzy, iże Chrystus jest własny Syn Boży, a iże Bóg przezeń wszystko stworzył, chociaż Moiżesz obojga jaśnie nie wypisał. </br>
+             Gdy nigdziej żadnym obyczajem nie ograniczą czego, zgoła o wszystkim się rozumieć ma.</span>  
+  </span> 
+  
+  , że Abrahamów syn, 
   Jezus Chrystus, jest też i Synem Bożym, chocia tego Moiżesz jaśnie a wyraźnie nie wypisał, jedno tylko apostołowie Chrystusowi, tak też wierzy, że zgoła wszystko Bóg przez 
   Syna swego stworzył, przeto iż też i to apostołowie wypisali, nic nie dając znać, żeby to tylko, a nie owo, ale zgoła wyznawając, że wszystko Bóg przezeń 
   stworzył.
@@ -289,15 +297,34 @@ MDLXX
   wszystki ma przynieść. Takżeć też gdyby byli apostołowie tak napisali: „Wszytkie nowe rzeczy przezeń są stworzone”, daliby byli znać, że nie zgoła wszystkie rzeczy 
   są przezeń stworzone, jedno tylko nowe. Ale iż nie tak napisali, ale oto tak: „Wszystki rzeczy przezeń są stworzone”, jaśnie tak dali znać, że zgoła wszystko Bóg 
   przezeń stworzył. Nietrudnoć było apostołom przydać to słowo: „nowe” i przydaliby byli, gdyby byli tak wierzyli. Ale iż wierzyli, że zgoła wszystko Bóg przezeń 
-  stworzył, przeto nie mogli inaczej tego wypisać, jedno jako napisali świadcząc, że Bóg wszystko przezeń stworzył: tak rzeczy wszystki widome, jako i niewidome, 
+  stworzył, przeto nie mogli inaczej tego wypisać, jedno jako 
+  
+
+  <span class="reference" onclick="showReference(this);"> napisali świadcząc <span class="referencetext">
+             Col. 1. v. 16. loan. 1. v. 3. Col. 1. r. 17. </span>  
+  </span> 
+  
+  , że Bóg wszystko przezeń stworzył: tak rzeczy wszystki widome, jako i niewidome, 
   iż też ani jedna rzecz nie jest bez niego stworzona. A za tym idzie, iż Chrystus jest przede wszytkimi rzeczami, ponieważ wszystkie rzeczy przezeń stworzone są.
 
-</br>&nbsp;&nbsp;&nbsp;   Tę wielką tajemną rzecz Jan Ewanielista na przodku swej Ewanielijej wypisał tymi słowy: „Naprzód było słowo”, to jest pierwej, niżli co było stworzono, był Syn Boży, 
+</br>&nbsp;&nbsp;&nbsp;   Tę wielką tajemną rzecz Jan Ewanielista na przodku swej Ewanielijej 
+  
+    <span class="reference" onclick="showReference(this);">wypisał<span class="referencetext">
+             Ioan. 1 v. 1. </span>  
+  </span> 
+  
+   tymi słowy: „Naprzód było słowo”, to jest pierwej, niżli co było stworzono, był Syn Boży, 
   Jezus Chrystus. Apostołowie nic o Chrystusie nie pisali, co jest każdemu przez się jawno, jedno to, czegośmy my wiedzieć nie mogli, gdyby oni byli, tego wypisując, 
   nie objawili. A jeślibyś to tak chciał rozumieć, jako ebijonite wykładają: „Na początku było słowo, to jest był wtenczas Syn Boży, gdy począł uczyć”, tedyby to był 
   nam objawił, cośmy i bez jego pisania mogli wiedzieć. Bo nie może żaden nic począć, gdyby nie był. Każdyć natenczas jest, gdy co czyni albo czynić poczyna. Przeto 
+
+    <span class="reference" onclick="showReference(this);">głupstwo by było pisać<span class="referencetext">
+             Głupi wykręt ebijonitów.</span>  
+  </span> 
+
+
   
-  głupstwo by było pisać, że Chrystus był, gdy uczył, abo gdy począł uczyć, bo każdy to i bez pisania dobrze wie, iż jeślić uczył, tedyć był.
+  , że Chrystus był, gdy uczył, abo gdy począł uczyć, bo każdy to i bez pisania dobrze wie, iż jeślić uczył, tedyć był.
 
 </br>&nbsp;&nbsp;&nbsp;   Ponieważ tedy to głupstwo nie przystoi powadze Pisma świętego, musi być, że Jan święty nie togo nas tymi słowy nauczył, że Chrystus był wtenczas, gdy począł uczyć, 
   ale tę nam tajemną rzecz objawił, iż Chrystus pierwej był, niżli co było stworzono.
