--- a/1.html
+++ b/1.html
@@ -454,7 +454,14 @@ MDLXX
   . Bo żaden inaczej nie rzecze, dając znać, że o tym Bóg wie, jedno tak właśnie: „Bóg to wie”. Tak pospolicie mówią: „do Boga tego”, ale tak nie dają znać, żeby o tym Bóg wiedział, 
   ale iż tego wiele jest. Nadto chociaby też w łacińskim języku ty słowa: „u Boga to jest” znamionowały: „Bóg to wie”, nie przeto by i w greckim albo w którym inym znamionowały. 
   Po polsku mówiąc: „jest ci ich do Bo-ga” da się znać, że ich jest wiele, a po łacinie to mówiąc: "est eos ad Deum" i źle się po łacinie mówi, i u łacinników nie znamionuje tego, 
-  co u Polaków, po polsku mówiąc, znamionuje. Przeto głupstwo tu swoje ukazali, iż z łacińskiego języka chcieli ukazać, żeby to: „u Boga to jest” znamionowało w greckim języku: „Bóg to wie”. 
+  co u Polaków, po polsku mówiąc, znamionuje. Przeto 
+
+    <span class="reference" onclick="showReference(this);">głupstwo<span class="referencetext">
+             Głupstwo ebijonitów.</span>  
+    </span> 
+  
+  
+  tu swoje ukazali, iż z łacińskiego języka chcieli ukazać, żeby to: „u Boga to jest” znamionowało w greckim języku: „Bóg to wie”. 
   Komu prawdy nie dostaje, musi leda co zmyślać, przeto i oni muszą tak czynić, bo im prawdy nie dostaje.
 
 </br>&nbsp;&nbsp;&nbsp;  A wypisawszy Jan święty o tym słowie, kiedy było, tudzież wypisał i to, czym było, tak pisząc: "a Bogiem było to słowo”. Co Jan święty przez przydanie artykułów 
@@ -463,13 +470,27 @@ MDLXX
   "kai o theos in logos", tedyby po polsku musiał tak wyłożyć: "a Bóg był słowem”, ale iż tak stoi: "kai theos in o logos", tedy musi to tak po polsku wyłożyć: "a Bogiem było to słowo”. 
   A iż chocia to słowo, Bogiem będąc, było u Boga, przedsię jednak nie dwa Bogowie byli, ani są, ani będą. Kto chce tego słuszny dowód widzieć, niech czyta Tertulijana w księgach o Trójcy 
   na końcu. Tam z niego może każdy wyrozumieć, jako to może być, że jedyny Bóg jest Ociec, chociaż i Syn jego, Jezus Chrystus, Bogiem jest. Potem Jan święty, co był na dwa członki rozłożył, 
-  w jednę to kupę złożył, tak pisząc: "To naprzód było u Boga”. Tym powtórzeniem dał znać, iż to wielka rzecz jest, o której on daje znać, a takowa, którą każdy wierny ma często u siebie 
+  w jednę to kupę złożył, tak pisząc: "To naprzód było u Boga”. 
+
+    <span class="reference" onclick="showReference(this);">Tym powtórzeniem<span class="referencetext">
+             Dlaczego jednę rzecz Jan ś. powtórzył.</span>
+    </span> 
+   
+  
+  dał znać, iż to wielka rzecz jest, o której on daje znać, a takowa, którą każdy wierny ma często u siebie 
   powtarzać, mając ją na dobrej pamięci. Kto chce komu nieco wbić w pa-mięć, ten mu to często przypomina. A każdy to czyni tylko w tych rzeczach, na których wiele należy, bo o małe rzeczy, 
   mało dbając, mało ich przypominają. Otóż Jan święty tym powtórzeniem dał znać, iż na tym wiele należy wiedzieć to, że Chrystus naprzód był u Boga, bo tak każdy Chrystusa pozna, że on jest ten, 
   który był pierwej, niżli się świat stał.
 
 </br>&nbsp;&nbsp;&nbsp;  Zasię wiedzieć to, że Chrystus był wtenczas, gdy począł uczyć, nic na tym nie należy, bobych tak nie wiedział, co Jezus był, i głupia by to rzecz była i po wtóre 
-  przypominać, co i bez pierwszego przypominania mógł każdy sam przez się dobrze wiedzieć, bo żaden nie może nic począć, jeśliby nie był. O niepospolitym niepospolite rzeczy piszą i mówią. 
+  przypominać, co i bez pierwszego przypominania mógł każdy sam przez się dobrze wiedzieć, bo żaden nie może nic począć, jeśliby nie był. O niepospolitym 
+
+    <span class="reference" onclick="showReference(this);">niepospolite<span class="referencetext">
+              O niepospolitym rzeczy piszą niepospolite.</span>  
+    </span> 
+  
+  
+  rzeczy piszą i mówią. 
   A to: "To było naprzód u Boga”, rozumiejąc tak, żeby tu Jan dał znać, że na początku Bóg o Chrystusie wiedział albo że na początku Bóg Chrystusa znał, pospolita by to rzecz była, bo o 
   każdym może każdy pisać, że Bóg o nim wie, a iże go zna Bóg, boć nic nie jest skryto przed oczyma jego. Musi być tedy, że to niepospolita rzecz jest, którą tu nam Jan dał znać, a to przeto, 
   iż ją nie o pospolitym człowieku pisał i powtórzył ją jako tę, na której wiele należy. Otóż ta będzie, gdy właśnie będziem rozumieć, że Chrystus naprzód był u Boga
@@ -480,20 +501,47 @@ MDLXX
   ten, który by głowę z gliny ulepiwszy, szyję by i piersi złote do niej przypoił i przystosował. Począłby od lekkich rzeczy, na których nic nie należy, a konałby to rzeczami znamienitymi, 
   na których wiele nałoży. 
 
-</br>&nbsp;&nbsp;&nbsp;  A tak i sam porządek ich fałszywy być wykład ukazuje. A co powiadają, ze wszystki rzeczy nowe są przezeń stworzone, to rozeznanie jest od nich zmyślone, bo z słów 
-  Jana świętego nie może żaden rozeznać, jeśli to tylko o starych rzeczach pisał czyli o nowych tylko, ponieważ zgoła pisał, że wszytki rzeczy są przezeń uczynione. A nie tylko tu Jan nie 
+</br>&nbsp;&nbsp;&nbsp;  A tak i sam porządek ich fałszywy być wykład ukazuje. A co 
+  
+  
+    <span class="reference" onclick="showReference(this);">powiadają<span class="referencetext">
+             Ebijonitów fałszywe dokładanie do słowa Bożego.</span>  
+    </span> 
+  
+  
+  , ze wszystki rzeczy nowe są przezeń stworzone, to rozeznanie jest od nich zmyślone, bo z słów 
+  Jana świętego nie może żaden rozeznać, jeśli to tylko o starych rzeczach pisał czyli o nowych tylko, ponieważ zgoła 
+  
+  
+    <span class="reference" onclick="showReference(this);">pisał<span class="referencetext">
+             Coi. 1. v. 16.</span>  
+    </span> 
+  
+  , że wszytki rzeczy są przezeń uczynione. A nie tylko tu Jan nie 
   dokłada tego, żeby wszystki rzeczy nowe były przezeń stworzone, ale i Paweł wszędzie tylko tak zgoła pisze: "Wszystkie rzeczy przezeń są stworzone”. I żaden z apostołów nijakim obyczajem 
   nie dał znać, żeby to tylko, a nie owo było przezeń stworzono. Tedyć musi być, iż jako wierzyli, że zgoła wszystko Bóg przezeń stworzył, tak też i zgoła świadczyli, że wszystkie rzeczy 
   przezeń są uczynione.
 
-</br>&nbsp;&nbsp;&nbsp;  A ponieważ i tego wyraźnymi słowy dokładali, bo tak Jan pisze: "a bez niego nie uczyniona jest ani jedna rzecz”, jako w greckim stoi, tedyćby byli i tego dołożyli, 
+</br>&nbsp;&nbsp;&nbsp;  A ponieważ i tego wyraźnymi słowy dokładali, bo tak Jan 
+
+    <span class="reference" onclick="showReference(this);">pisze<span class="referencetext">
+             Ioan. 1.v.3.</span>  
+    </span> 
+  
+  : "a bez niego nie uczyniona jest ani jedna rzecz”, jako w greckim stoi, tedyćby byli i tego dołożyli, 
   że tylko nowe rzeczy wszystki przezeń są uczynione. Bo nie jest podobna prawdzie, aby jednej rzeczy pilnie dokładając, drugiej mieli zaniedbać, a tej takowej, na której by wszystko należało. 
   Otóż co by nam należało wiedzieć, że tylko nowe wszystki rzeczy przezeń są uczynione, tego by nam nie dali żadnym obyczajem znać. A jakosmy wierzyć nie mieli, tak by nam dali znać, zgoła 
   pisząc, że wszystko przezeń uczyniono jest, także też ani jednej rzeczy nie masz, która by bez niego była uczyniona.
 
 </br>&nbsp;&nbsp;&nbsp;  Uważże sobie każdy, jeśli takowe omylające pisanie przystoi pilności apostolskiej. Okrom ebijonitów wszystkich by to takowe pisanie w błąd zawiodło. Ale ci wszyscy 
   będą mieć wymówkę, bo zgoła stoi, że wszystkie rzeczy są przezeń stworzone, a oni, gdy tak wierzą, karać się ich za to nie godzi. Ale ebijonite jeśli się omylą, jakoż się mylą, jak się u 
-  Boga wymówią z tego, że tak nie wierzyli, jako stoi pisano? Domyślanie ich nie tylko wymówki nie będzie miało, ale owszejki, będzie godno karania. Bo Bóg nie kazał się nic domyślać, jedno 
+  Boga wymówią z tego, że tak nie wierzyli, jako stoi pisano? 
+
+    <span class="reference" onclick="showReference(this);">Domyślanie<span class="referencetext">
+             Domyślanie nie będzie miało wymówki.</span>  
+    </span> 
+  
+  ich nie tylko wymówki nie będzie miało, ale owszejki, będzie godno karania. Bo Bóg nie kazał się nic domyślać, jedno 
   tylko tak wierzyć i tak czynić, i to tylko czynić, jako i co kazał wierzyć, i co jako czynić.
 
 </br>&nbsp;&nbsp;&nbsp;  Świadczyć Paweł, że któżkolwiek jest w Chrystusie, nowym stworzeniem jest, ale tego nie pisze, żeby to tylko, a nic inego przez Chrystusa nie było uczyniono. Te słowa 
