--- a/1.html
+++ b/1.html
@@ -544,7 +544,13 @@ MDLXX
   ich nie tylko wymówki nie będzie miało, ale owszejki, będzie godno karania. Bo Bóg nie kazał się nic domyślać, jedno 
   tylko tak wierzyć i tak czynić, i to tylko czynić, jako i co kazał wierzyć, i co jako czynić.
 
-</br>&nbsp;&nbsp;&nbsp;  Świadczyć Paweł, że któżkolwiek jest w Chrystusie, nowym stworzeniem jest, ale tego nie pisze, żeby to tylko, a nic inego przez Chrystusa nie było uczyniono. Te słowa 
+</br>&nbsp;&nbsp;&nbsp;  
+
+    <span class="reference" onclick="showReference(this);">Świadczyć<span class="referencetext">
+             2. Cor. 5. v. 17.</span>  
+    </span> 
+  
+   Paweł, że któżkolwiek jest w Chrystusie, nowym stworzeniem jest, ale tego nie pisze, żeby to tylko, a nic inego przez Chrystusa nie było uczyniono. Te słowa 
   Pawła ś. nie tylko nie ukazują tego, żeby nic inego nie było przez Chrystusa uczyniono, jedno tylko to odnowienie, które się dzieje w prawdziwych członkach jego, ale też ani tego, żeby to 
   odnowienie stało się sprawą jego. I owszem, Paweł świadczy, że takowe odnowienie w ludziech sprawuje Bóg przez Ducha Ś., bo tak pisze w 3. Do Tyta: "Zbawił nas przez omycie odrodzenia i 
   odnowienia Ducha Ś.”.
@@ -555,11 +561,22 @@ MDLXX
   miał od niego żywot wieczny.
 
 </br>&nbsp;&nbsp;&nbsp;  A co Bóg o sobie świadczy u Ezajasza, że on sam niebo stworzył i nie był z nim żaden, toć on dał znać, że nie miał żadnego takowego, który by mu pomógł stworzyć jako 
-  temu, który by sam nie przemógł uczynić. Pomocnika Bóg żadnego nie miał, gdy wszytko stworzył, jako i teraz żadnego nie ma, czyniąc to wszystko, co się po wszystkim świecie dzieje. Ale żeby 
+  temu, który by sam nie przemógł uczynić. 
+  
+  Pomocnika
+  
+  
+  Bóg żadnego nie miał, gdy wszytko stworzył, jako i teraz żadnego nie ma, czyniąc to wszystko, co się po wszystkim świecie dzieje. Ale żeby 
   żaden nie był, przez którego by Bóg wszystko stworzył, to jest fałsz, bo nie tylko w Nowym Zakonie jaśnie to stoi, że Bóg wszystko przez Syna swego stworzył, ale też i w Starym, częścią 
   według wykładu wszystkich w Piśmie świętym ludzi nauczonych, a częścią według wykładu i samych apostołów.
 
-</br>&nbsp;&nbsp;&nbsp;  Paweł, pisząc do Żydów w 1. kap., świadczy, iż nie tylko to, co jest w Psalmie 45.: „Stolec twój, Boże, na wieki wieków”, ale też i to, co jest w Psalmie 102.: 
+</br>&nbsp;&nbsp;&nbsp;  Paweł, pisząc do Żydów w 1. kap., świadczy, iż nie tylko to, co jest w Psalmie 45.: „Stolec twój, Boże, na wieki wieków”, ale też i to, 
+
+    <span class="reference" onclick="showReference(this);">co jest<span class="referencetext">
+             Psalm 102. V. 26.</span>  
+    </span> 
+  
+  w Psalmie 102.: 
   "Ty przedtem, Panie, ziemięś ugruntował, a sprawy rąk twoich są nieba”, o Chrystusie prorok mówił, wyznawając go być stworzycielem nieba i ziemie. U Pawła tak stoi w 1. kap.: "A do aniołów 
   ci mówi: który posły swoje czyni duchy, a sługi swe ogniowy płomień. A do Syna: Stolec twój, Boże, na wieki wieków, pręt prawości, pręt królestwa twego. Umiłowałeś sprawiedliwość, a masz 
   w nienawiści nieprawość. Dlatego pomazał cię Bóg, Bóg twój, olejem wesołości nad uczestniki twe. I: ty naprzód, Panie, ziemięś ugruntował, a sprawa rąk twoich są nieba”.
@@ -577,7 +594,13 @@ MDLXX
 
 </br>&nbsp;&nbsp;&nbsp;  Aczkolwiek tedy Moiżesz wyraźnie nie wypisał, żeby Bóg przez Syna swego wszystko stworzył, jedno iż wżdy dosyć jaśnie dał znać, że i kto iny jeszcze był, który 
   też człowieka stworzył, tedyć nic inszego nie było zatajono, jedno to, kto to był, do którego Bóg mówił: „Uczyńmy człowieka”. A iż potem apostołowie objawili, że Bóg wszystko przez Syna 
-  swojego stworzył, tedy stąd k temu przy- chodziemy, że gdy Bóg mówił: „Uczyńmy człowieka”, do Syna to swego mówił. Także i to: „Oto człowiek stał się jako jeden z nas”. A jeśli rzeką, 
+  swojego stworzył, tedy stąd k temu przy- chodziemy, że gdy Bóg mówił: „Uczyńmy człowieka”, do Syna to swego mówił. 
+
+    <span class="reference" onclick="showReference(this);"> Także i to<span class="referencetext">
+             Gen. 3. v. 22.</span>  
+    </span> 
+ 
+  : „Oto człowiek stał się jako jeden z nas”. A jeśli rzeką, 
   że to do aniołów mówił, skąd to wiedzą, żeby już natenczas anieli byli, ponieważ Moiżesz pilnie wypisując, co Bóg którego dnia stworzył, żadnej wzmianki nie uczynił, żeby stworzył anioły. 
   A tak jeśli Moiżesz tak pilny był, że nic nie opuścił, ale wszystko wypisał, tedyć albo anieli nie są stworzeni, albo że żadnych aniołów nie masz, jako saducei mniemali, nie prze iną 
   przyczynę, jedno iż tego Moiżesz nie napisał. Ale iż są, tedyć to jawna, że Moiżesz nie tak barzo pilnie wszystko wypisał, żeby nic nie opuścił. A chociaż byli anieli, gdy Bóg mówił: 
@@ -585,9 +608,23 @@ MDLXX
   tedyby byli anieli naszy stworzyciele.
 
 </br>&nbsp;&nbsp;&nbsp;  A tak nic nic zostaje, jedno to, abyśmy wierzyli, że to Bóg do Syna swego mówił, a to przeto, iż czasu łaski już to jest objawiono, że Bóg przez Syna swojego wszystko 
-  stworzył. Przetoż każdy wierny może tak z prorokiem do Syna Bożego mówić: „Ty przedtem, Panie, ziemięś ugruntował, a sprawa rąk twoich są nieba”.
+  stworzył. Przetoż każdy wierny może tak z prorokiem do Syna Bożego 
 
-</br>&nbsp;&nbsp;&nbsp;  Kiedy by kto chciał uporny być, tedyby i o to mógł się spierać, że nie Ociec, ale tylko Syn sam wzbudzi wszystki umarłe, a to przeto, iż tak sam o sobie świadczył 
+    <span class="reference" onclick="showReference(this);">mówić<span class="referencetext">
+             Żyd. 1.</br>
+             Psal. 102.</span>  
+    </span> 
+
+  : „Ty przedtem, Panie, ziemięś ugruntował, a sprawa rąk twoich są nieba”.
+
+</br>&nbsp;&nbsp;&nbsp;  Kiedy by kto chciał uporny być, tedyby i o to mógł się spierać, że nie Ociec, ale tylko Syn sam 
+  
+  <span class="reference" onclick="showReference(this);">wzbudzi<span class="referencetext">
+             Co Syn Boży mówił: „Ja wzbudzę”</span>  
+  </span> 
+
+  
+  wszystki umarłe, a to przeto, iż tak sam o sobie świadczył 
   u Jana w 6. kap.: „Który je ciało moje a pije krew moję, ma żywot wieczny, a ja go wzbudzę ostatecznego dnia”. To by tu mógł tym zawodzić, iż Chrystus nie mówił: „Bóg go przez mię wzbudzi”, 
   ale: „Ja go wzbudzę”. Jedno iż Paweł tak pisze (2. Cor. 4.): „Wiedząc, iż który wzbudził Pana Jezusa i nas też przez Jezusa wzbudzi”. Tedy stąd jest jawno, iż aczkolwiek tak Syn Boży mówił: 
   „Ja go wzbudzę”, jednak przedsię i to jest prawda, że Bóg wszystkich przez Syna swojego wzbudzi, jako Paweł uczy. Takżeć też aczkolwiek Bóg Ociec mówił: „Jam stworzył niebo” etc., przedsię 
